--- a/greetings.html
+++ b/greetings.html
@@ -3,7 +3,7 @@
     <title>Greeting Message</title> 
     <style>
 #lbl {
-    font-family: monospace;
+    font-family: Franklin Gothic Medium;
     font-size: xx-large;
     color: #626262;
     padding: 5px;
@@ -18,7 +18,7 @@
     font-size:large;
 }
 body{
-    background-color: aliceblue;
+    background-color: #0B0B0B;
 }
     </style>
 </head>
@@ -28,13 +28,13 @@ body{
 
 <script>
     var weekday = new Array(7);
-    weekday[0] = "Sunday";
-    weekday[1] = "Monday";
-    weekday[2] = "Tuesday";
-    weekday[3] = "Wednesday";
-    weekday[4] = "Thursday";
-    weekday[5] = "Friday";
-    weekday[6] = "Saturday";
+    weekday[0] = "Domingo";
+    weekday[1] = "Lunes";
+    weekday[2] = "Martes";
+    weekday[3] = "Miércoles";
+    weekday[4] = "Jueves";
+    weekday[5] = "Viernes";
+    weekday[6] = "Sábado";
 
     
     var today = new Date();
