--- a/greetings.html
+++ b/greetings.html
@@ -3,11 +3,10 @@
     <title>Greeting Message</title> 
     <style>
 #lbl {
-    font-family: monospace;
+    font-family: Sansita One;
     font-size: xx-large;
     color: #626262;
     padding: 5px;
-    border: 1px solid #ececec;
     text-align: center;
     line-height: 1.5;
     height:85%
