--- a/greetings.html
+++ b/greetings.html
@@ -3,7 +3,7 @@
     <title>Greeting Message</title> 
     <style>
 #lbl {
-    font-family: Sansita One;
+    font-family: "Sansita One";
     font-size: xx-large;
     color: #626262;
     padding: 5px;
