--- a/greetings.html
+++ b/greetings.html
@@ -27,13 +27,13 @@ body{
 
 <script>
     var weekday = new Array(7);
-    weekday[0] = "Domingo";
-    weekday[1] = "Lunes";
-    weekday[2] = "Martes";
-    weekday[3] = "Miércoles";
-    weekday[4] = "Jueves";
-    weekday[5] = "Viernes";
-    weekday[6] = "Sábado";
+    weekday[0] = "Sunday";
+    weekday[1] = "Monday";
+    weekday[2] = "Tuesday";
+    weekday[3] = "Wednesday";
+    weekday[4] = "Thursday";
+    weekday[5] = "Friday";
+    weekday[6] = "Saturday";
 
     
     var today = new Date();
@@ -45,13 +45,15 @@ body{
 
     if (hrs < 12)
         greet = 'Good Morning  ';
-    else if (hrs >= 12 && hrs <= 17)
+    else if ( hrs <= 18)
         greet = 'Good Afternoon ';
-    else if (hrs >= 17 && hrs <= 24)
+    else if (hrs <= 20)
         greet = 'Good Evening  ';
+    else if (hrs <= 24)
+        greet = 'Good Night  ';
 
     document.getElementById('lbl').innerHTML =
-        greet+=`<div id="date"> It's ${date}</div>`;
+        greet+=`<div id="date"> ${date}</div>`;
 </script> 
 </html>
 
