--- a/greetings.html
+++ b/greetings.html
@@ -5,7 +5,7 @@
 #lbl {
     font-family: "Sansita One";
     font-size: xx-large;
-    color: #626262;
+    color: #ffffff;
     padding: 5px;
     text-align: center;
     line-height: 1.5;
