--- a/greetings.html
+++ b/greetings.html
@@ -5,7 +5,7 @@
 #lbl {
     font-family: "Sansita One";
     font-size: xx-large;
-    color: #ffffff;
+    color: #FFFFFF;
     padding: 5px;
     text-align: center;
     line-height: 1.5;
@@ -56,4 +56,3 @@ body{
         greet+=`<div id="date"> ${date}</div>`;
 </script> 
 </html>
-
