--- a/greetings.html
+++ b/greetings.html
@@ -1,24 +1,33 @@
 <html> 
 <head>
-    <title>Greeting Message</title> 
+    <title>Date Widget Notion</title> 
     <style>
-#lbl {
-    font-family: "Sansita One";
-    font-size: xx-large;
-    color: #FFFFFF;
-    padding: 5px;
-    text-align: center;
-    line-height: 1.5;
-    height:85%
+      #lbl {
+        display: flex;
+        font-family: sans-serif;
+        font-size: 18pt;
+        color: #ffffff;
+        padding: 5px;
+        justify-content: left;
+        line-height: 1.5;
+        height:85%;
+        font-weight: bold;
+        flex-direction: row;
+      }
 
+      #container {
+        display: flex;
+        align-items: flex-start;
+      }
 
-}
-#date{
-    font-size:large;
-}
-body{
-    background-color: #0B0B0B;
-}
+      #date{
+          font-size:12pt;
+          font-weight: bold;
+      }
+
+      body{
+          background-color: #0B0B0B;
+      }
     </style>
 </head>
 <body>
@@ -35,24 +44,32 @@ body{
     weekday[5] = "Friday";
     weekday[6] = "Saturday";
 
+    const monthNames = ["january", "february", "march", "april", "may", "june",
+      "july", "august", "september", "october", "november", "december"
+    ];
+
     
     var today = new Date();
     var hrs = today.getHours();
     var dayOfWeek = weekday[today.getDay()];
-    var date = dayOfWeek+" " + today.getDate() + "/" +(today.getMonth()+1) +'/'+today.getFullYear()  ;
+    var date = `${dayOfWeek} ${monthNames[today.getMonth()]} ${today.getDate()}, ${today.getFullYear()}`;
 
     var greet;
 
     if (hrs < 12)
-        greet = 'Good Morning  ';
-    else if ( hrs <= 18)
-        greet = 'Good Afternoon ';
+        greet = 'good morning, Laya.  ';
+    else if (hrs <= 18)
+        greet = 'good afternoon, Laya. ';
     else if (hrs <= 20)
-        greet = 'Good Evening  ';
-    else if (hrs <= 24)
-        greet = 'Good Night  ';
+        greet = 'good evening, Laya.  ';
+    else
+        greet = 'good night, Laya.  ';
 
-    document.getElementById('lbl').innerHTML =
-        greet+=`<div id="date"> ${date}</div>`;
+    document.getElementById('lbl').innerHTML = `
+        <div class="container">
+          <div id="date"> ${date}</div>
+          <div class="greeting">${greet}</div>
+        <div/>
+    `;
 </script> 
 </html>
