--- a/calendar.html
+++ b/calendar.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<link rel="stylesheet" type="text/css" href="https://lth29.github.io/notion/style.css">
-<html>
-    <body>
-    </body>
-</html>
+<div class="wrapper">
+  <div id="calendari"></div>
+    <link rel="stylesheet" type="text/css" href="https://lth29.github.io/notion/style.css">
+</div>
