--- a/calendar1.html
+++ b/calendar1.html
@@ -1,1 +1,235 @@
-<ul _ngcontent-mpr-c6="" class="rounded-b-lg"><!----><li _ngcontent-mpr-c6="" class="days p-2" style="color: rgb(0, 0, 0);"><span _ngcontent-mpr-c6="" class="py-4 text-xl font-bold">S</span></li><li _ngcontent-mpr-c6="" class="days p-2" style="color: rgb(0, 0, 0);"><span _ngcontent-mpr-c6="" class="py-4 text-xl font-bold">M</span></li><li _ngcontent-mpr-c6="" class="days p-2" style="color: rgb(0, 0, 0);"><span _ngcontent-mpr-c6="" class="py-4 text-xl font-bold">T</span></li><li _ngcontent-mpr-c6="" class="days p-2" style="color: rgb(0, 0, 0);"><span _ngcontent-mpr-c6="" class="py-4 text-xl font-bold">W</span></li><li _ngcontent-mpr-c6="" class="days p-2" style="color: rgb(0, 0, 0);"><span _ngcontent-mpr-c6="" class="py-4 text-xl font-bold">T</span></li><li _ngcontent-mpr-c6="" class="days p-2" style="color: rgb(0, 0, 0);"><span _ngcontent-mpr-c6="" class="py-4 text-xl font-bold">F</span></li><li _ngcontent-mpr-c6="" class="days p-2" style="color: rgb(0, 0, 0);"><span _ngcontent-mpr-c6="" class="py-4 text-xl font-bold">S</span></li><!----><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base grey" style="color: rgb(0, 0, 0);"> 26</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base grey" style="color: rgb(0, 0, 0);"> 27</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base grey" style="color: rgb(0, 0, 0);"> 28</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base grey" style="color: rgb(0, 0, 0);"> 29</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base grey" style="color: rgb(0, 0, 0);"> 30</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);"> 1</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);"> 2</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);"> 3</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);"> 4</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);"> 5</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);"> 6</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);"> 7</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);"> 8</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);"> 9</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);"> 10</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);"> 11</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);"> 12</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);"> 13</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base" style="background-color: rgb(31, 41, 55); color: rgb(255, 255, 255);"> 14</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);"> 15</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);"> 16</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);"> 17</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);"> 18</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);"> 19</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);"> 20</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);"> 21</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);"> 22</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);"> 23</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);"> 24</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);"> 25</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);"> 26</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);"> 27</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);"> 28</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);"> 29</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);"> 30</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);"> 31</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);"> 31</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base grey" style="color: rgb(0, 0, 0);"> 1</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base grey" style="color: rgb(0, 0, 0);"> 2</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base grey" style="color: rgb(0, 0, 0);"> 3</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base grey" style="color: rgb(0, 0, 0);"> 4</div></li><li _ngcontent-mpr-c6="" class="flex justify-center items-center"><div _ngcontent-mpr-c6="" class="p-2 rounded-lg text-xl font-base grey" style="color: rgb(0, 0, 0);"> 5</div></li></ul>
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+</head>
+<body>
+	<div class="badge-weather rounded-lg flex flex-col justify-center items-center overflow-hidden" id="cl" style="width: 390px; height: 416px; transform-origin: left top 0px; transition: all 100ms ease 0s; background-color: rgb(11,11,11); border: 0px solid rgb(214, 215, 214); transform: scale(0.848718);">
+		<div class="w-full text-white flex justify-between items-center p-4" style="background-color: rgb(31, 41, 55);">
+			<button style="color: rgb(255, 255, 255);"><i class="fa-solid fa-chevron-left"></i></button><span class="px-2 text-2xl font-extrabold" style="color: rgb(255, 255, 255);">October 2021</span><button style="color: rgb(255, 255, 255);"><i class="fa-solid fa-chevron-right"></i></button>
+		</div>
+		<div class="p-3" style="background-color: rgb(249, 250, 251);">
+			<ul class="rounded-b-lg">
+				<!---->
+				<li class="days p-2" style="color: rgb(0, 0, 0);"><span class="py-4 text-xl font-bold">S</span></li>
+				<li class="days p-2" style="color: rgb(0, 0, 0);"><span class="py-4 text-xl font-bold">M</span></li>
+				<li class="days p-2" style="color: rgb(0, 0, 0);"><span class="py-4 text-xl font-bold">T</span></li>
+				<li class="days p-2" style="color: rgb(0, 0, 0);"><span class="py-4 text-xl font-bold">W</span></li>
+				<li class="days p-2" style="color: rgb(0, 0, 0);"><span class="py-4 text-xl font-bold">T</span></li>
+				<li class="days p-2" style="color: rgb(0, 0, 0);"><span class="py-4 text-xl font-bold">F</span></li>
+				<li class="days p-2" style="color: rgb(0, 0, 0);"><span class="py-4 text-xl font-bold">S</span></li><!---->
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base grey" style="color: rgb(0, 0, 0);">
+						26
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base grey" style="color: rgb(0, 0, 0);">
+						27
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base grey" style="color: rgb(0, 0, 0);">
+						28
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base grey" style="color: rgb(0, 0, 0);">
+						29
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base grey" style="color: rgb(0, 0, 0);">
+						30
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);">
+						1
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);">
+						2
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);">
+						3
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);">
+						4
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);">
+						5
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);">
+						6
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);">
+						7
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);">
+						8
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);">
+						9
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);">
+						10
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);">
+						11
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);">
+						12
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);">
+						13
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base" style="background-color: rgb(31, 41, 55); color: rgb(255, 255, 255);">
+						14
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);">
+						15
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);">
+						16
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);">
+						17
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);">
+						18
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);">
+						19
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);">
+						20
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);">
+						21
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);">
+						22
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);">
+						23
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);">
+						24
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);">
+						25
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);">
+						26
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);">
+						27
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);">
+						28
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);">
+						29
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);">
+						30
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);">
+						31
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base" style="color: rgb(0, 0, 0);">
+						31
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base grey" style="color: rgb(0, 0, 0);">
+						1
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base grey" style="color: rgb(0, 0, 0);">
+						2
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base grey" style="color: rgb(0, 0, 0);">
+						3
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base grey" style="color: rgb(0, 0, 0);">
+						4
+					</div>
+				</li>
+				<li class="flex justify-center items-center">
+					<div class="p-2 rounded-lg text-xl font-base grey" style="color: rgb(0, 0, 0);">
+						5
+					</div>
+				</li>
+			</ul>
+		</div>
+	</div>
+</body>
+</html>
