--- a/calendar1.html
+++ b/calendar1.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./css/calendar.css">
 </head>
 <body>
+    background-color: #0B0B0B;
+
     <div class="root">
         <div class="calendar" id="calendar">
 
