--- a/calendar1.html
+++ b/calendar1.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/calendar.css">
 </head>
 <body>
-    background-color: #0B0B0B;
+    --background-color: #0B0B0B;
 
     <div class="root">
         <div class="calendar" id="calendar">
