--- a/calendar1.html
+++ b/calendar1.html
@@ -7,8 +7,7 @@
     <title>Calendario con moment.js y JavaScript | CodeMundo</title>
     <link rel="stylesheet" href="./css/calendar.css">
 </head>
-<body>
-    --background-color: #0B0B0B;
+<body style="background-color:#0B0B0B;">
 
     <div class="root">
         <div class="calendar" id="calendar">
