--- a/calendar/calendar1.html
+++ b/calendar/calendar1.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Calendario con moment.js y JavaScript | CodeMundo</title>
-    <link rel="stylesheet" href="./css/calendar.css">
+    <link rel="stylesheet" href="./calendar.css">
 </head>
 <body style="background-color:#0B0B0B;">
 
@@ -16,7 +15,7 @@
     </div>
     <script  type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script  type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/locale/es.js"></script>
-    <script  type="text/javascript" src="./js/calendar.js"></script>
+    <script  type="text/javascript" src="./calendar.js"></script>
     <script type="text/javascript">
         let calendar = new Calendar('calendar');
         calendar.getElement().addEventListener('change', e => {
