--- a/greet/greetings.html
+++ b/greet/greetings.html
@@ -58,9 +58,9 @@
 
     if (hrs < 12)
         greet = 'Good morning, Laya.  ';
-    else if (hrs <= 18)
+    else if (hrs < 18)
         greet = 'Good afternoon, Laya. ';
-    else if (hrs <= 20)
+    else if (hrs < 20)
         greet = 'Good evening, Laya.  ';
     else
         greet = 'Good night, Laya.  ';
