Update and rename wid.html to message/wid.html

--- a/message/wid.html
+++ b/message/wid.html
@@ -10,7 +10,7 @@
 
 <style>
     body{
-        background-color: white;
+        background-color: #0b0b0b;
     }
     .box{
     background-color: rgb(114, 179, 209);
