--- a/message/wid.html
+++ b/message/wid.html
@@ -15,14 +15,17 @@
     .box{
     background-color: rgb(114, 179, 209);
     width: 250px;
-    padding: 15px;
+    height: 120px;;
+    padding: 10px;
+    font-size: 10px;
     border-radius: 10px;
     text-align: center;
     color: rgb(0, 0, 0);
     font-family: Helvetica;
-    font-style: italic;
+    /* font-style: italic; */
+    font-weight: 600;
     display: inline-block;
-    margin: 10px;
+    margin: 5px;
 
     }
 
@@ -33,9 +36,10 @@
 
     .header{
         color: rgb(255, 255, 255);
-        font-size: 50px;
+        font-size: 30px;
         font-family: fantasy;
         font-style: normal;
+        font-weight: normal;
     }
     .header2{
         font-size: 40px;
@@ -44,6 +48,18 @@
 
 </head>
 <body>
+    <div class="box">
+        <div class="header">  <i class="fas fa-heart"></i><br>
+            Supernova    </div>
+
+        Experiencia, persona u oportunidad gracias a la que sabes 
+        que acabarás siendo una mejor versión de ti mismo
+             
+    </div>
+  
+</body>
+</html>
+
     <div class="box">
         <div class="header">  <i class="fas fa-heart"></i><br>
             Supernova    </div>
