--- a/greet/greetings.html
+++ b/greet/greetings.html
@@ -7,7 +7,7 @@
         font-family: sans-serif;
         font-size: 18pt;
         color: #ffffff;
-        padding: 5px;
+        /* padding: 5px; */
         justify-content: left;
         line-height: 1.5;
         height:85%;
