--- a/message/wid.html
+++ b/message/wid.html
@@ -15,7 +15,7 @@
     .box{
     background-color: rgb(114, 179, 209);
     width: 250px;
-    height: 120px;;
+    /*height: 120px;;*/
     padding: 10px;
     font-size: 10px;
     border-radius: 10px;
