--- a/greet/greetings.html
+++ b/greet/greetings.html
@@ -57,20 +57,19 @@
     var greet;
 
     if (hrs < 12)
-        greet = 'Good morning, Laya.  ';
+        greet = 'Good morning, Laya.';
     else if (hrs < 18)
-        greet = 'Good afternoon, Laya. ';
+        greet = 'Good afternoon, Laya.';
     else if (hrs < 20)
-        greet = 'Good evening, Laya.  ';
+        greet = 'Good evening, Laya.';
     else
-        greet = 'Good night, Laya.  ';
+        greet = 'Good night, Laya.';
 
     document.getElementById('lbl').innerHTML = `
         <div class="container">
           <div id="date"> ${date}</div>
           <div class="greeting">${greet}</div>
-        <div/>
-    `;
+        <div/>`;
 </script> 
 </html>
 
